updated token - logic